[project]
name = "safe-root"
version = "0.1.0"
description = "uv workspace project for Safe"
requires-python = ">=3.12"
dependencies = ["safe"]

[tool.uv.workspace]
members = ["safe-py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
safe = { workspace = true }
